--- a/index.css
+++ b/index.css
@@ -1,5 +1,27 @@
 #lienzo{
-	position: absolute;
-	left: 35%;
-	top: 150px;
+	padding-left: 0;
+    padding-right: 0;
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+    width: 800px;
+
+    margin-top: 5px;
+    margin-bottom: 5px;
+}
+body{
+	background-color: #CADBDD;
+}
+
+
+p, h1, h2{
+	font-family: Verdana, Helvetica, sans-serif;
+}
+
+.titulo{
+	text-align: center;
+}
+.texto{
+	color:#272C2D;
+	font-size: 20px;
 }
